# v1/routes/owner-routes.js
@@ -1,7 +1,7 @@
 const express = require('express');
 const { requireAuth } = require('../controllers/businessLogic/requireAuth');
-const { deleteCustomer } = require('../controllers/customers/deleteCustomer');
-const { updateCustomer } = require('../controllers/customers/updateCustomer');
+const { deleteOwner } = require('../controllers/owners/deleteOwner');
+const { updateOwner } = require('../controllers/owners/updateOwner');
 const { createOwner } = require('../controllers/owners/createOwner');
 const { getOwners, getOwner } = require('../controllers/owners/getOwner');
 const router = express.Router();
@@ -9,8 +9,8 @@ const router = express.Router();
 router.get('/owners',requireAuth,getOwners); //get all owners
 router.get('/owner/:owner_uuid',requireAuth,getOwner); //get owner
 router.post('/owner/create', requireAuth,createOwner); //create new owner
-router.put('/owner/modify/:owner_uuid',requireAuth,updateCustomer); //edit owner
-router.delete('/owner/delete/:owner_uuid',requireAuth,deleteCustomer); //remove owner
+router.put('/owner/modify/:owner_uuid',requireAuth,updateOwner); //edit owner
+router.delete('/owner/delete/:owner_uuid',requireAuth,deleteOwner); //remove owner
 
 
 module.exports = router;
